LM : Commit intermédiaire - Méthodes get